--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,6 +16,9 @@ plugins:
 # Style
 style: dark
 footer: 'follow on <a href="https://bsky.app/profile/mitcharoo.com">bluesky</a>'
+header_pages:
+  - index.md
+  - about.md
  
 # Exclude from processing.
 # The following items will not be processed, by default.
