--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,13 +1,18 @@
-title: "mitcharoo.com"
-description: ""
-baseurl: "mitcharoo.com"
+title: mitcharoo.com
+domain: mitcharoo.com
+description: >- # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mitcharoo.com"
-remote_theme: b2a3e8/jekyll-theme-console
 
+remote_theme: b2a3e8/jekyll-theme-console
+plugins:
+  - jekyll-feed
+
+style: dark
+footer: 'follow on <a href="https://bsky.app/profile/mitcharoo.com">bluesky</a>'
 header_pages:
   - index.md
   - about.md
-
-style: dark
-
-footer: 'follow on <a href="https://bsky.app/profile/mitcharoo.com">bluesky</a>'
